mpam/target/generated-sources/antlr4/pathParser.py
# Generated from path.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class pathParser ( Parser ):

    grammarFileName = "path.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'@'", "'at'", "':'", "'barrier'", 
                     "'('", "')'", "','", "'to'", "'col'", "'column'", "'row'", 
                     "'absorb'", "'well'", "'pause'", "'wait'", "'for'", 
                     "'tick'", "'ticks'", "'reach'", "'pass'", "'through'", 
                     "'up'", "'north'", "'down'", "'south'", "'right'", 
                     "'east'", "'left'", "'west'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "INT", 
                      "FLOAT", "STRING", "EOL_COMMENT", "COMMENT", "WS" ]

    RULE_definition = 0
    RULE_path = 1
    RULE_motion = 2
    RULE_direction = 3
    RULE_coord = 4
    RULE_barrier = 5
    RULE_name = 6
    RULE_kwd_names = 7

    ruleNames =  [ "definition", "path", "motion", "direction", "coord", 
                   "barrier", "name", "kwd_names" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    ID=31
    INT=32
    FLOAT=33
    STRING=34
    EOL_COMMENT=35
    COMMENT=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pathParser.RULE_definition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Path_defContext(DefinitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.DefinitionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(pathParser.NameContext,0)

        def path(self):
            return self.getTypedRuleContext(pathParser.PathContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath_def" ):
                listener.enterPath_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath_def" ):
                listener.exitPath_def(self)


    class Barrier_defContext(DefinitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.DefinitionContext
            super().__init__(parser)
            self.n = None # Token
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(pathParser.NameContext,0)

        def INT(self):
            return self.getToken(pathParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBarrier_def" ):
                listener.enterBarrier_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBarrier_def" ):
                listener.exitBarrier_def(self)


    class Drop_defContext(DefinitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.DefinitionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def name(self):
            return self.getTypedRuleContext(pathParser.NameContext,0)

        def coord(self):
            return self.getTypedRuleContext(pathParser.CoordContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrop_def" ):
                listener.enterDrop_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrop_def" ):
                listener.exitDrop_def(self)



    def definition(self):

        localctx = pathParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_definition)
        self._la = 0 # Token type
        try:
            self.state = 31
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                localctx = pathParser.Path_defContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 16
                self.name()
                self.state = 17
                self.match(pathParser.T__0)
                self.state = 18
                self.path(0)
                pass

            elif la_ == 2:
                localctx = pathParser.Drop_defContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 20
                self.name()
                self.state = 21
                _la = self._input.LA(1)
                if not(_la==pathParser.T__1 or _la==pathParser.T__2):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 22
                self.coord()
                pass

            elif la_ == 3:
                localctx = pathParser.Barrier_defContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 24
                self.name()
                self.state = 25
                self.match(pathParser.T__3)
                self.state = 26
                self.match(pathParser.T__4)
                self.state = 27
                self.match(pathParser.T__5)
                self.state = 28
                localctx.n = self.match(pathParser.INT)
                self.state = 29
                self.match(pathParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def motion(self):
            return self.getTypedRuleContext(pathParser.MotionContext,0)


        def path(self):
            return self.getTypedRuleContext(pathParser.PathContext,0)


        def getRuleIndex(self):
            return pathParser.RULE_path

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPath" ):
                listener.enterPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPath" ):
                listener.exitPath(self)



    def path(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = pathParser.PathContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_path, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.motion()
            self._ctx.stop = self._input.LT(-1)
            self.state = 41
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = pathParser.PathContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_path)
                    self.state = 36
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 37
                    self.match(pathParser.T__7)
                    self.state = 38
                    self.motion() 
                self.state = 43
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MotionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pathParser.RULE_motion

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Dir_motionContext(MotionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.MotionContext
            super().__init__(parser)
            self.dist = None # Token
            self.copyFrom(ctx)

        def direction(self):
            return self.getTypedRuleContext(pathParser.DirectionContext,0)

        def INT(self):
            return self.getToken(pathParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDir_motion" ):
                listener.enterDir_motion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDir_motion" ):
                listener.exitDir_motion(self)


    class To_padContext(MotionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.MotionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def coord(self):
            return self.getTypedRuleContext(pathParser.CoordContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTo_pad" ):
                listener.enterTo_pad(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTo_pad" ):
                listener.exitTo_pad(self)


    class Reach_barrierContext(MotionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.MotionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def barrier(self):
            return self.getTypedRuleContext(pathParser.BarrierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReach_barrier" ):
                listener.enterReach_barrier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReach_barrier" ):
                listener.exitReach_barrier(self)


    class To_colContext(MotionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.MotionContext
            super().__init__(parser)
            self.col = None # Token
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(pathParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTo_col" ):
                listener.enterTo_col(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTo_col" ):
                listener.exitTo_col(self)


    class Pause_ticksContext(MotionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.MotionContext
            super().__init__(parser)
            self.ticks = None # Token
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(pathParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPause_ticks" ):
                listener.enterPause_ticks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPause_ticks" ):
                listener.exitPause_ticks(self)


    class Pass_barrierContext(MotionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.MotionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def barrier(self):
            return self.getTypedRuleContext(pathParser.BarrierContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPass_barrier" ):
                listener.enterPass_barrier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPass_barrier" ):
                listener.exitPass_barrier(self)


    class To_rowContext(MotionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.MotionContext
            super().__init__(parser)
            self.row = None # Token
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(pathParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTo_row" ):
                listener.enterTo_row(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTo_row" ):
                listener.exitTo_row(self)


    class To_wellContext(MotionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pathParser.MotionContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTo_well" ):
                listener.enterTo_well(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTo_well" ):
                listener.exitTo_well(self)



    def motion(self):

        localctx = pathParser.MotionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_motion)
        self._la = 0 # Token type
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = pathParser.Dir_motionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.direction()
                self.state = 46
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 45
                    localctx.dist = self.match(pathParser.INT)


                pass

            elif la_ == 2:
                localctx = pathParser.To_colContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.match(pathParser.T__8)
                self.state = 49
                _la = self._input.LA(1)
                if not(_la==pathParser.T__9 or _la==pathParser.T__10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 50
                localctx.col = self.match(pathParser.INT)
                pass

            elif la_ == 3:
                localctx = pathParser.To_rowContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.match(pathParser.T__8)
                self.state = 52
                self.match(pathParser.T__11)
                self.state = 53
                localctx.row = self.match(pathParser.INT)
                pass

            elif la_ == 4:
                localctx = pathParser.To_padContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.match(pathParser.T__8)
                self.state = 55
                self.coord()
                pass

            elif la_ == 5:
                localctx = pathParser.To_wellContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.match(pathParser.T__12)
                pass

            elif la_ == 6:
                localctx = pathParser.To_wellContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 57
                self.match(pathParser.T__8)
                self.state = 58
                self.match(pathParser.T__13)
                pass

            elif la_ == 7:
                localctx = pathParser.Pause_ticksContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 59
                _la = self._input.LA(1)
                if not(_la==pathParser.T__14 or _la==pathParser.T__15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pathParser.T__16:
                    self.state = 60
                    self.match(pathParser.T__16)


                self.state = 63
                localctx.ticks = self.match(pathParser.INT)
                self.state = 65
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 64
                    _la = self._input.LA(1)
                    if not(_la==pathParser.T__17 or _la==pathParser.T__18):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                pass

            elif la_ == 8:
                localctx = pathParser.Reach_barrierContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 70
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [pathParser.T__19]:
                    self.state = 67
                    self.match(pathParser.T__19)
                    pass
                elif token in [pathParser.T__15]:
                    self.state = 68
                    self.match(pathParser.T__15)
                    self.state = 69
                    self.match(pathParser.T__2)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 72
                self.barrier()
                pass

            elif la_ == 9:
                localctx = pathParser.Pass_barrierContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 73
                self.match(pathParser.T__20)
                self.state = 75
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 74
                    self.match(pathParser.T__21)


                self.state = 77
                self.barrier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.which = None # Token


        def getRuleIndex(self):
            return pathParser.RULE_direction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDirection" ):
                listener.enterDirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDirection" ):
                listener.exitDirection(self)




    def direction(self):

        localctx = pathParser.DirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_direction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            localctx.which = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pathParser.T__22) | (1 << pathParser.T__23) | (1 << pathParser.T__24) | (1 << pathParser.T__25) | (1 << pathParser.T__26) | (1 << pathParser.T__27) | (1 << pathParser.T__28) | (1 << pathParser.T__29))) != 0)):
                localctx.which = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x = None # Token
            self.y = None # Token

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(pathParser.INT)
            else:
                return self.getToken(pathParser.INT, i)

        def getRuleIndex(self):
            return pathParser.RULE_coord

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoord" ):
                listener.enterCoord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoord" ):
                listener.exitCoord(self)




    def coord(self):

        localctx = pathParser.CoordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_coord)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(pathParser.T__5)
            self.state = 83
            localctx.x = self.match(pathParser.INT)
            self.state = 84
            self.match(pathParser.T__7)
            self.state = 85
            localctx.y = self.match(pathParser.INT)
            self.state = 86
            self.match(pathParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BarrierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(pathParser.NameContext,0)


        def getRuleIndex(self):
            return pathParser.RULE_barrier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBarrier" ):
                listener.enterBarrier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBarrier" ):
                listener.exitBarrier(self)




    def barrier(self):

        localctx = pathParser.BarrierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_barrier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pathParser.ID, 0)

        def kwd_names(self):
            return self.getTypedRuleContext(pathParser.Kwd_namesContext,0)


        def getRuleIndex(self):
            return pathParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = pathParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 90
                self.match(pathParser.ID)
                pass

            elif la_ == 2:
                self.state = 91
                self.kwd_names()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Kwd_namesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pathParser.RULE_kwd_names

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKwd_names" ):
                listener.enterKwd_names(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKwd_names" ):
                listener.exitKwd_names(self)




    def kwd_names(self):

        localctx = pathParser.Kwd_namesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_kwd_names)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.path_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def path_sempred(self, localctx:PathContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 1)
         




